# project-5-c-o-no

./: CMakeLists.txt  README.md
src/: helper.c  readmap.c  sa.c  sa.h
src/func/: approx.c  approx.h  constants.h  debugger.c  debugger.h  helper.c  helper.h  rotater.c  rotater.h  sa.c  sa.h
src/func/parsers/: simple-fasta-parser.c  simple-fasta-parser.h  simple-fastq-parser.c  simple-fastq-parser.h
src/parsers/: simple-fasta-parser.h  simple-fastq-parser.c
test/: minunit.h  testApprox.c  testHelper.h  testRotation.c  testSearch.c  tests.c  tests.yaml  time.c
test-data/: a.fastq  aaa.fa  aaa.txt  abab.fa  abc.fastq  abcabc.fa  genome.fa  i.fastq  is.fastq  long.fastq  mid.fa  mis.fa  mis.fastq  mis.txt  reads.fq
test-data/copy/: mis.fa  mis.fastq
test-data/data-for-experiments/: generator.py  generator2.py  names.py
